--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700|Titan+One|Creepster|Satisfy|Eczar:700");
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap");
 
+* {
+    font-smooth: always;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 :root {
     --background-color: #2f2f2f;
     --primary-color: #1f1f1f;
@@ -20,6 +26,7 @@ body {
 
 .background {
     position: fixed;
+    background: var(--background-color);
     width: 100%;
     height: 100%;
     left: 0;
@@ -36,115 +43,9 @@ body {
     left: 50%;
     background-size: 550px;
     background-position: -100px -100px;
-    background-image: url(/content/background.png);
+    background-image: url("/content/background.png");
     opacity: 0.075;
     transform: translate(-50%, -50%) rotate(15deg);
-}
-
-.header {
-    background-color: var(--primary-color);
-    box-shadow: inset 0 -6px rgba(0, 0, 0, .2);
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    height: 55px;
-    justify-content: center;
-    left: 0;
-    overflow: hidden;
-    padding-bottom: 6px;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 10;
-}
-
-.header>img {
-    transform: scale(0.85);
-    margin-right: 5px;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.header>div {
-    color: var(--accent-color);
-    font-family: Titan One, sans-serif;
-    font-size: 40px;
-    line-height: 49px;
-    outline: none;
-    text-decoration: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.footer {
-    background-color: var(--primary-color);
-    box-shadow: inset 0 6px rgba(0, 0, 0, .2);
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    height: 55px;
-    justify-content: space-between;
-    left: 0;
-    overflow: hidden;
-    padding-bottom: 6px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    z-index: 10;
-}
-
-.footer-left {
-    color: var(--accent-color);
-    cursor: pointer;
-    font-family: Nunito, sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 55px;
-    outline: none;
-    text-align: left;
-    padding-left: 20px;
-    text-decoration: underline;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.footer-left[aria-disabled="true"] {
-    opacity: 0.5;
-    cursor: default;
-    text-decoration: none;
-}
-
-.footer-center {
-    color: var(--accent-color);
-    font-family: Titan One, sans-serif;
-    font-size: 40px;
-    line-height: 55px;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.footer-right {
-    color: var(--accent-color);
-    cursor: pointer;
-    font-family: Nunito, sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 55px;
-    outline: none;
-    text-align: right;
-    padding-right: 20px;
-    text-decoration: underline;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.footer-right[aria-disabled="true"] {
-    opacity: 0.5;
-    cursor: default;
-    text-decoration: none;
 }
 
 .regular-body {
@@ -157,18 +58,4 @@ body {
     width: 100%;
     z-index: -1;
     color: var(--accent-color);
-}
-
-.modal {
-    display: flex;
-    position: fixed;
-    z-index: 15;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.6);
-    justify-content: center;
-    align-items: center;
 }
