--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -25,6 +25,14 @@ body {
     overflow-x: hidden;
 }
 
+.tooltip {
+    color: var(--accent-color) !important;
+    background: var(--background-color) !important;
+    border-radius: 7px !important;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, .15)) !important;
+    /* filter: invert(1) drop-shadow(0 0 4px rgba(0, 0, 0, .15)) !important; */
+}
+
 .background {
     position: fixed;
     background: var(--background-color);
@@ -73,4 +81,152 @@ body {
     font-family: Nunito, sans-serif;
     font-size: 24px;
     text-align: center;
+}
+
+.container {
+    background-color: var(--primary-color);
+    border-radius: 7px;
+    box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    left: 50%;
+    max-width: 420px;
+    padding-bottom: 7px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 90%
+}
+
+.container-header {
+    color: var(--accent-color);
+    font-family: Titan One, sans-serif;
+    font-size: 55px;
+    margin: 10px 20px 20px;
+    text-align: center;
+    font-size: 50px;
+    line-height: 54px
+}
+
+.input-container {
+    align-items: center;
+    border: 2px solid var(--background-color);
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    height: 45px;
+    margin: auto auto 15px;
+    max-width: 330px;
+    width: 80%
+}
+
+.input-container:focus-within {
+    border-color: var(--secondary-color);
+}
+
+.input-container:focus-within>.icon {
+    opacity: 1;
+}
+
+.icon {
+    align-items: center;
+    color: var(--accent-color);
+    display: flex;
+    font-size: 25px;
+    height: 45px;
+    justify-content: center;
+    min-width: 22px;
+    padding-left: 10px;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 22px;
+    opacity: 0.5;
+}
+
+.input {
+    align-items: center;
+    border: none;
+    background-color: var(--primary-color);
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    font-family: Nunito, sans-serif;
+    font-size: 17px;
+    height: 35px;
+    margin: 5px 2px 5px 11px;
+    outline: none;
+    text-align: left;
+    width: calc(100% - 35px)
+}
+
+.icon-right {
+    align-items: center;
+    color: var(--accent-color);
+    display: flex;
+    font-size: 25px;
+    height: 45px;
+    justify-content: center;
+    min-width: 22px;
+    padding-right: 10px;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 22px;
+}
+
+.checkbox-container {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: auto auto 15px;
+    max-width: 330px;
+    width: 80%
+}
+
+.checkbox-text {
+    color: #fff;
+    font-family: Nunito, sans-serif;
+    font-size: 14px;
+    line-height: 16px;
+    margin-left: 15px;
+    text-align: left
+}
+
+.checkbox {
+    align-items: center;
+    border: 2px solid;
+    border-color: var(--background-color);
+    border-radius: 6px;
+    color: var(--accent-color);
+    cursor: pointer;
+    display: flex;
+    font-size: 16px;
+    height: 24px;
+    justify-content: center;
+    min-width: 24px;
+    outline: none;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 24px;
+    transition: .2s;
+}
+
+.checkbox:hover {
+    border-color: var(--secondary-color);
+}
+
+.checkbox-checked {
+    color: var(--accent-color);
+}
+
+.checkbox-unchecked {
+    color: var(--primary-color);
+}
+
+.checkbox-checkmark {
+    text-align: center;
+    width: 16px
 }
