--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -91,7 +91,7 @@ body {
     display: flex;
     flex-direction: column;
     left: 50%;
-    max-width: 420px;
+    max-width: 550px;
     padding-bottom: 7px;
     position: absolute;
     text-align: center;
@@ -107,8 +107,16 @@ body {
     font-size: 55px;
     margin: 10px 20px 20px;
     text-align: center;
-    font-size: 50px;
-    line-height: 54px
+    line-height: 54px;
+}
+
+.container-header-smaller {
+    color: var(--accent-color);
+    font-size: 15px;
+    text-align: center;
+    position: relative;
+    bottom: 11.5px;
+    opacity: 0.5;
 }
 
 .input-container {
@@ -119,8 +127,7 @@ body {
     flex-direction: row;
     height: 45px;
     margin: auto auto 15px;
-    max-width: 330px;
-    width: 80%
+    width: 90%;
 }
 
 .input-container:focus-within {
@@ -182,8 +189,6 @@ body {
     flex-direction: row;
     justify-content: flex-start;
     margin: auto auto 15px;
-    max-width: 330px;
-    width: 80%
 }
 
 .checkbox-text {
