--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -16,6 +16,7 @@
 }
 
 body {
+    background: var(--background-color);
     font-family: Nunito, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -35,7 +36,6 @@ body {
 
 .background {
     position: fixed;
-    background: var(--background-color);
     width: 100%;
     height: 100%;
     left: 0;
@@ -69,6 +69,20 @@ body {
     position: absolute;
     top: 55px;
     width: 100%;
+}
+
+.modal {
+    display: flex;
+    position: fixed;
+    z-index: 15;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
 }
 
 .big-text {
